# rtic-mc-experiments

compilation_passes/rtic-reader-writer-pass/: Cargo.toml
compilation_passes/rtic-reader-writer-pass/src/deadline_pass/parse/: ast.rs  mod.rs
compilation_passes/rtic-readers-writer-pass/: Cargo.toml
compilation_passes/rtic-readers-writer-pass/src/deadline_pass/: mod.rs
distributions/nrf82840/: Cargo.toml
distributions/nrf82840-rw/: Cargo.toml
distributions/nrf82840-rw/.cargo/: config.toml
distributions/nrf82840-rw/armv7m-rtic-macro/src/: lib.rs
distributions/nrf82840-rw/examples/: reader_writer.rs
distributions/nrf82840-rw/rtic-cs/: Cargo.toml
distributions/nrf82840-rw/rtic-cs/src/: lib.rs
distributions/nrf82840-rw/src/: export.rs
distributions/nrf82840/armv7m-rtic-macro/: Cargo.toml
distributions/nrf82840/armv7m-rtic-macro/src/: lib.rs
distributions/nrf82840/examples/: hello_message.rs  hello_world.rs
distributions/nrf82840/src/: export.rs
distributions/nrf82840_rw/: Cargo.toml  memory.x  rw_exp.rs
distributions/nrf82840_rw/.cargo/: config.toml
distributions/nrf82840_rw/armv7m-rtic-macro/: Cargo.toml
distributions/nrf82840_rw/armv7m-rtic-macro/src/: lib.rs
distributions/nrf82840_rw/examples/: rw.rs
distributions/nrf82840_rw/src/: export.rs
rtic-cs/src/: lib.rs
