[package]
name = "rtic"
version = "0.1.0-nrf52840"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtic-macro = { path = "armv7m-rtic-macro" }
rtic-sw-pass = { path = "../../compilation_passes/rtic-sw-pass", default-features = false }
log = "0.4.28"

nrf52840-hal = { version = "0.19.0" }
rtt-target = { version = "0.6.1" }

[dev-dependencies]
rtic-macro = { path = "armv7m-rtic-macro", features = [
    # "swtasks",
], default-features = false }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

panic-halt = "1.0.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(have_basepri)'] }

[features]
# swtasks = ["rtic-macro/swtasks"]
