[package]
name = "rtic-macro"
version = "0.1.0"
edition = "2021"
authors = ["Per Lindgren"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
rtic-core = { path = "../../../rtic-core", features = [
    # "debug_expand"
] }
# rtic-auto-assign = { path = "../../../compilation_passes/rtic-auto-assign" }
syn = { version = "2.0.110", features = ["extra-traits", "full"] }
rtic-sw-pass = { path = "../../../compilation_passes/rtic-sw-pass" }

[features]
# autoassign = []
swtasks = []
